Bug 445023 - It is impossible to use the standard key Ctrl-A to select all
Summary: It is impossible to use the standard key Ctrl-A to select all
Status: RESOLVED FIXED
Alias: None
Product: kgeotag
Classification: Applications
Component: General (other bugs)
Version First Reported In: 1.1.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Leupold
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-05 15:02 UTC by Steve Evans
Modified: 2021-11-05 17:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Evans 2021-11-05 15:02:12 UTC
SUMMARY

It is impossible to use the standard key Ctrl-A to select all. This is because it is assigned to the option "Assign images to GPS data".

STEPS TO REPRODUCE
1. Load several image files.
2. Select one of them.
3. Use Ctrl-A to select all of the files.

OBSERVED RESULT

A dialogue saying "Cannot search for matches: No GPS tracks have been loaded yet." is shown.

EXPECTED RESULT

All of the files would be selected.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Tobias Leupold 2021-11-05 17:32:38 UTC
This is actually right! I didn't think of that when assigning the shortcut. I'll change this.

Thanks for the hint :-)
Comment 2 Tobias Leupold 2021-11-05 17:45:59 UTC
Git commit a0be2c78934283695887290c8cea494e56ce7d10 by Tobias Leupold.
Committed on 05/11/2021 at 17:44.
Pushed by tleupold into branch 'master'.

Make CTRL+A functional again to select all files in a list

... by assigning CTRL+M (like "match" or such) to "Assign images to GPS
data".

M  +1    -1    src/MainWindow.cpp

https://invent.kde.org/graphics/kgeotag/commit/a0be2c78934283695887290c8cea494e56ce7d10