Make CTRL+A functional again to select all files in a list

... by assigning CTRL+M (like "match" or such) to "Assign images to GPS
data".

BUG: 445023